add proper wall

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
     max-width: 100%;
     margin: auto;
     padding: 40pt;
-    background-image: url(http://orgmode.org/worg-unicorn.png);
+    background-image: url(http://ibnhatab.github.com/images/wall.jpg);
     background-position: 25px 5px;
     background-repeat: no-repeat;
     padding-bottom: 10px;
