--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
     line-height: 21px;
     color: #333;
 
-    max-width: 100%;
+    max-width: 760px;
     margin: auto;
     padding: 40pt;
     background-image: url(http://ibnhatab.github.com/images/wall.jpg);
